--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
   <head>
   </head>
   <body>
-    <h1>Hello Ting Ting!</h1>
+    <h1>Hello!</h1>
     <p>This is my GitHub Pages.</p>
   </body>
 </html>
